traefik/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.kairos.ai`)
      middlewares:
        - name: basic-auth
      services:
      - kind: TraefikService
        name: api@internal
  tls:
    secretName: kairos-ai-prod-tls
